Android splash screen

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">nativeapp</string>
+    <string name="app_name">META1</string>
+    <string name="splash_img_desc">splash</string>
 </resources>
